testsuite/tests/contrib/lkt_semantic/ambiguous_type/test.out
Resolving test.lkt
==================
test.lkt:4:9: error: ambiguous type for expression
4 | val a = "hello"
  |         ^^^^^^^

